# dft_bench

./: .gitignore  CMakeLists.txt  README.md
include/: xoroshiro128plus.h
src/: dft23.h  dft23_1.c  dft23_2.c  dft23_3.c  dft23_4.c  dft_bench.c  xoroshiro128plus.c
